backend/src/lang/preprocess/parse/snapshots/cam_core_internal__lang__preprocess__parse__tests__args and quotes.snap
---
source: backend/src/lang/preprocess/parse/tests.rs
expression: "parse(r#\"#define A(B, C) \"B C\"\"#)"
---
Ok(
    Tree(
        [
            (
                Directive(
                    Define(
                        "A",
                        Some(
                            {
                                "B",
                                "C",
                            },
                        ),
                        Macro(
                            [
                                Single(
                                    (
                                        QuotedString(
                                            "B C",
                                        ),
                                        16..21,
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
                0..22,
            ),
        ],
    ),
)
