backend/src/lang/preprocess/parse/snapshots/cam_core_internal__lang__preprocess__parse__tests__comment placement.snap
---
source: backend/src/lang/preprocess/parse/tests.rs
expression: "parse(r#\"#define/**/A(B,/**/ /**/C)/**/ \"B C\" /**/ // a b c\"#)"
---
Ok(
    Tree(
        [
            (
                Directive(
                    Define(
                        "A",
                        Some(
                            {
                                "B",
                                "C",
                            },
                        ),
                        Macro(
                            [
                                (
                                    Single(
                                        (
                                            QuotedString(
                                                "B C",
                                            ),
                                            Span {
                                                source: Source(
                                                    "test.event",
                                                ),
                                                span: Position {
                                                    offset: 31,
                                                    row: 0,
                                                    col: 31,
                                                }..Position {
                                                    offset: 36,
                                                    row: 0,
                                                    col: 36,
                                                },
                                            },
                                        ),
                                    ),
                                    Span {
                                        source: Source(
                                            "test.event",
                                        ),
                                        span: Position {
                                            offset: 26,
                                            row: 0,
                                            col: 26,
                                        }..Position {
                                            offset: 42,
                                            row: 0,
                                            col: 42,
                                        },
                                    },
                                ),
                            ],
                        ),
                    ),
                ),
                Span {
                    source: Source(
                        "test.event",
                    ),
                    span: Position {
                        offset: 0,
                        row: 0,
                        col: 0,
                    }..Position {
                        offset: 51,
                        row: 1,
                        col: 0,
                    },
                },
            ),
        ],
    ),
)
