backend/src/lang/preprocess/parse/snapshots/cam_core_internal__lang__preprocess__parse__tests__dont_lex_line_comment.snap
---
source: backend/src/lang/preprocess/parse/tests.rs
expression: "parse(r#\"/ / // this is not part of the line\"#)"
---
Ok(
    Tree(
        [
            (
                Line(
                    [
                        Single(
                            (
                                Slash,
                                0..1,
                            ),
                        ),
                        Single(
                            (
                                Slash,
                                2..3,
                            ),
                        ),
                    ],
                ),
                0..36,
            ),
        ],
    ),
)
