backend/src/lang/preprocess/parse/snapshots/cam_core_internal__lang__preprocess__parse__tests__include_with_comments.snap
---
source: backend/src/lang/preprocess/parse/tests.rs
expression: "parse(r#\"#include /* */ /**/ A/B/C /* */ // a b c\"#)"
---
Ok(
    Tree(
        [
            (
                Directive(
                    Include(
                        "A/B/C",
                    ),
                ),
                0..41,
            ),
        ],
    ),
)
