backend/src/lang/preprocess/parse/snapshots/cam_core_internal__lang__preprocess__parse__tests__message_with_comments.snap
---
source: backend/src/lang/preprocess/parse/tests.rs
expression: "parse(r#\"MESSAGE this message / /* contains */ // comments\"#)"
---
Ok(
    Tree(
        [
            (
                Message(
                    S(
                        [
                            Text(
                                "this message /",
                            ),
                        ],
                    ),
                ),
                0..50,
            ),
        ],
    ),
)
