backend/src/lang/preprocess/parse/snapshots/cam_core_internal__lang__preprocess__parse__tests__no body.snap
---
source: backend/src/lang/preprocess/parse/tests.rs
expression: "parse(r#\"#define A\"#)"
---
Ok(
    Tree(
        [
            (
                Directive(
                    Define(
                        "A",
                        None,
                        Macro(
                            [],
                        ),
                    ),
                ),
                0..10,
            ),
        ],
    ),
)
