backend/src/lang/preprocess/parse/snapshots/cam_core_internal__lang__preprocess__parse__tests__quotes only.snap
---
source: backend/src/lang/preprocess/parse/tests.rs
expression: "parse(r#\"#define A \"B C\"\"#)"
---
Ok(
    Tree(
        [
            (
                Directive(
                    Define(
                        "A",
                        None,
                        Macro(
                            [
                                Single(
                                    (
                                        Ident(
                                            "B",
                                        ),
                                        11..12,
                                    ),
                                ),
                                Single(
                                    (
                                        Ident(
                                            "C",
                                        ),
                                        13..14,
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
                0..16,
            ),
        ],
    ),
)
