backend/src/lang/preprocess/parse/snapshots/cam_core_internal__lang__preprocess__parse__tests__realistic_test.snap
---
source: backend/src/lang/preprocess/parse/tests.rs
expression: "parse(r#\"#ifdef DRAGON_VEINS\nVeinEffect(0, FreezeAllEnemies)\n#endif // DRAGON_VEINS\n\nsetText(0x160, NewChName)\n\nMESSAGE this example is a snippet from the FE8 Skill System\n\nALIGN 4\nNewChName:\nString(\"Boss Rush\")\"#)"
---
Ok(
    Tree(
        [
            (
                Directive(
                    IfDef(
                        "DRAGON_VEINS",
                        Tree(
                            [
                                (
                                    Line(
                                        [
                                            Single(
                                                (
                                                    Ident(
                                                        "VeinEffect",
                                                    ),
                                                    20..30,
                                                ),
                                            ),
                                            Group {
                                                kind: Paren,
                                                members: [
                                                    Single(
                                                        (
                                                            Number {
                                                                payload: "0",
                                                                radix: 10,
                                                            },
                                                            31..32,
                                                        ),
                                                    ),
                                                    Single(
                                                        (
                                                            Comma,
                                                            32..33,
                                                        ),
                                                    ),
                                                    Single(
                                                        (
                                                            Ident(
                                                                "FreezeAllEnemies",
                                                            ),
                                                            34..50,
                                                        ),
                                                    ),
                                                ],
                                            },
                                        ],
                                    ),
                                    20..52,
                                ),
                            ],
                        ),
                        Tree(
                            [],
                        ),
                    ),
                ),
                0..58,
            ),
            (
                Line(
                    [],
                ),
                58..76,
            ),
            (
                Line(
                    [
                        Single(
                            (
                                Ident(
                                    "setText",
                                ),
                                76..83,
                            ),
                        ),
                        Group {
                            kind: Paren,
                            members: [
                                Single(
                                    (
                                        Number {
                                            payload: "160",
                                            radix: 16,
                                        },
                                        84..89,
                                    ),
                                ),
                                Single(
                                    (
                                        Comma,
                                        89..90,
                                    ),
                                ),
                                Single(
                                    (
                                        Ident(
                                            "NewChName",
                                        ),
                                        91..100,
                                    ),
                                ),
                            ],
                        },
                    ],
                ),
                76..102,
            ),
            (
                Line(
                    [],
                ),
                102..103,
            ),
            (
                Message(
                    S(
                        [
                            Text(
                                "this example is a snippet from the FE8 Skill System",
                            ),
                        ],
                    ),
                ),
                103..163,
            ),
            (
                Line(
                    [],
                ),
                163..164,
            ),
            (
                Line(
                    [
                        Single(
                            (
                                Ident(
                                    "ALIGN",
                                ),
                                164..169,
                            ),
                        ),
                        Single(
                            (
                                Number {
                                    payload: "4",
                                    radix: 10,
                                },
                                170..171,
                            ),
                        ),
                    ],
                ),
                164..172,
            ),
            (
                Line(
                    [
                        Single(
                            (
                                Ident(
                                    "NewChName",
                                ),
                                172..181,
                            ),
                        ),
                        Single(
                            (
                                Colon,
                                181..182,
                            ),
                        ),
                    ],
                ),
                172..183,
            ),
            (
                Line(
                    [
                        Single(
                            (
                                Ident(
                                    "String",
                                ),
                                183..189,
                            ),
                        ),
                        Group {
                            kind: Paren,
                            members: [
                                Single(
                                    (
                                        QuotedString(
                                            "Boss Rush",
                                        ),
                                        190..201,
                                    ),
                                ),
                            ],
                        },
                    ],
                ),
                183..203,
            ),
        ],
    ),
)
