backend/src/lang/preprocess/parse/snapshots/cam_core_internal__lang__preprocess__parse__tests__spaces.snap
---
source: backend/src/lang/preprocess/parse/tests.rs
expression: "parse(r#\"#define A(B,C)C\"#)"
---
Ok(
    Tree(
        [
            (
                Directive(
                    Define(
                        "A",
                        Some(
                            {
                                "B",
                                "C",
                            },
                        ),
                        Macro(
                            [
                                Single(
                                    (
                                        Ident(
                                            "C",
                                        ),
                                        14..15,
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
                0..16,
            ),
        ],
    ),
)
